# efr32mg24

./: .gitignore  Cargo.toml  memory.x  run.gdb
.cargo/: config.toml
efr32mg24/: Cargo.toml  build.rs  wrapper.h
efr32mg24/config/: sl_sleeptimer_config.h
efr32mg24/sisdk-sdk/util/se_release/public/: s2c1_se_fw_upgrade_app_1v2p16.hex  s2c2_se_fw_upgrade_app_1v2p14.hex  s2c3_se_fw_upgrade_app_2v2p5.hex  s2c4_se_fw_upgrade_app_2v2p5.hex  s2c5_se_fw_upgrade_app_2v2p5.hex  s2c6_se_fw_upgrade_app_2v2p4.hex  s2c7_se_fw_upgrade_app_2v2p4.hex  s2c8_se_fw_upgrade_app_2v2p4.hex
efr32mg24/src/: main.rs
efr32mg24b210f1536im48_sys/: Cargo.toml  build.sh
efr32mg24b210f1536im48_sys/src/: acmp0_s.rs  buram_s.rs  burtc_ns.rs  cmu_ns.rs  dcdc_s.rs  devinfo.rs  dmem_s.rs  dpll0_ns.rs  emu_s.rs  eusart0_s.rs  eusart1_s.rs  fsrco_s.rs  gpcrc_ns.rs  gpio_s.rs  hfrcoem23_s.rs  hfxo0_s.rs  hostmailbox_ns.rs  i2c0_s.rs  iadc0_s.rs  icache0_s.rs  keyscan_s.rs  ldma_ns.rs  ldmaxbar_ns.rs  letimer0_ns.rs  lfrco_ns.rs  lfxo_ns.rs  lib.rs  msc_s.rs  mvp_s.rs  pcnt0_ns.rs  prs_ns.rs  radioaes_s.rs  scratchpad_ns.rs  semailbox_s_host.rs  smu_ns.rs  smu_ns_cfgns.rs  syscfg_ns_cfgns.rs  syscfg_s.rs  sysrtc0_ns.rs  timer2_ns.rs  (+4 more)
efr32mg24b210f1536im48_sys/src/acmp0_ns/: inputctrl.rs  status.rs  syncbusy.rs
efr32mg24b210f1536im48_sys/src/acmp0_s/: swrst.rs
efr32mg24b210f1536im48_sys/src/acmp1_ns/: ctrl.rs  ien.rs
efr32mg24b210f1536im48_sys/src/acmp1_s/: cfg.rs  if_.rs
efr32mg24b210f1536im48_sys/src/buram_ns/: ret0_reg.rs  ret10_reg.rs  ret11_reg.rs  ret14_reg.rs  ret16_reg.rs  ret1_reg.rs  (+12 more)
(+993 files in other folders)
